Transformed to Java 8 compatibility.